# helmor-taper

./: .gitignore  Cargo.toml  README.md
.builder/: Dockerfile  README.md
.github/workflows/: ci.yml
docs/: feature-evidence.md
docs/sample-tape/: README.md  result.json
docs/tapes/add-remote-wizard/: result.json
scenarios/: add-remote-wizard.ts  agent-on-remote.ts  chat-real-on-remote.ts  connect-over-ssh.ts  end-to-end-demo.ts  first-connect-bundle.ts  isolation-proof.ts  lib.ts  observability.ts  remote-file-ops.ts  remote-runner.ts  remote-workspace.ts  resilience.ts  row-actions.ts
scripts/: capture-scene.ts  feature-probe.ts  finish-tape.ts  mcp-bridge.ts  probe-bundle-install.ts  probe-daemon-persistence.ts  probe-remote-agent.ts  probe-remote-port-forward.ts  probe-remote-terminal.ts  probe-remote-watch.ts  record-remote-runner.sh  setup-remote-workspace.ts  ssh-config.sh
src/: commands.rs  lib.rs
src/bridge/: client.rs  mod.rs  protocol.rs
src/probes/: bundle_install.rs  daemon_persistence.rs  feature_probe.rs  mod.rs  remote_agent.rs  remote_port_forward.rs  remote_terminal.rs  remote_watch.rs  setup_remote_workspace.rs
src/scenarios/: add_remote_wizard.rs  agent_on_remote.rs  chat_real_on_remote.rs  connect_over_ssh.rs  end_to_end_demo.rs  first_connect_bundle.rs  isolation_proof.rs  mod.rs  observability.rs  remote_file_ops.rs  remote_runner.rs  remote_workspace.rs  resilience.rs  row_actions.rs
src/tape/: assertion.rs  mod.rs  post.rs  recorder.rs  screencapturekit.rs
tests/: scenarios_integration.rs  tape_integration.rs
(+14 files in other folders)
